Adds NGRX, refactoring player selection modal

--- a/src/app/features/table-board/components/table-board/table-board.component.html
+++ b/src/app/features/table-board/components/table-board/table-board.component.html
@@ -1,10 +1,10 @@
 <div class="table d-flex justify-content-center align-items-center p-5">
   <div class="board">
     <div class="board-row" *ngFor="let tiles of board">
-      <div class="property" *ngFor="let i of tiles" [class]="i.style?.class">
-        {{i.name}}
+      <div class="property" *ngFor="let tile of tiles; let i = index" [class]="tile.style?.class" [style.border-bottom-color]="tile.style?.color">
+        <div>{{tile.name}}</div>
+        <div>{{tile.id}}</div>
       </div>
     </div>
   </div>
-
 </div>
