--- a/src/app/features/table-board/components/table-board/table-board.component.scss
+++ b/src/app/features/table-board/components/table-board/table-board.component.scss
@@ -1,41 +1,90 @@
-.board {
-  width: 75vw;
-  height: 75vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: start;
+//.board {
+//  width: 75vw;
+//  height: 75vw;
+//  display: flex;
+//  flex-direction: column;
+//  justify-content: start;
+//  align-items: start;
+//
+//  .board-row {
+//    display: flex;
+//    justify-content: start;
+//    align-items: center;
+//    width: 100%;
+//    height: calc(100% / 11);
+//    text-align: center;
+//  }
+//
+//  .property {
+//    display: flex;
+//    justify-content: center;
+//    align-items: center;
+//    flex-direction: column;
+//    width: calc(100% / 11);
+//    height: 100%;
+//
+//    &-right {
+//      position: relative;
+//      left: calc((100% / 11) * 9);
+//      //transform: rotate(-90deg);
+//    }
+//
+//    &-left {
+//      position: relative;
+//      transform: rotate(90deg);
+//    }
+//  }
+//
+//  .color {
+//    height: 10px;
+//    width: 100%;
+//    border: 1px solid black;
+//  }
+//
+//  .start-tile {
+//    border: 1px solid green;
+//  }
+//}
+
+
+.debug {
+  border: 1px solid red;
+
+  &-green {
+    border: 1px solid green;
+  }
+}
+
+
+.table {
+  width: auto;
+  height: auto;
+  box-shadow: 0 0 8px 4px blue;
+
 
   .board-row {
-    display: flex;
-    justify-content: start;
-    align-items: center;
     width: 100%;
-    height: calc(100% / 11);
-    text-align: center;
   }
 
-  .property {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-top: 1px solid black;
-    width: calc(100% / 11);
-    height: 100%;
-
-    &-right {
-      position: relative;
-      left: calc((100% / 11) * 9);
-      //transform: rotate(-90deg);
-    }
-    &-left {
-      position: relative;
-      transform: rotate(90deg);
-    }
+  .board-row-extreme {
+    width: 100%;
   }
 
-  .start-tile {
-    border: 1px solid green;
+  .tile-row-1 {
+    border: 1px solid black;
+    width: 150px;
+    height: 200px;
+
+    &:first-child {
+      border: 1px solid red;
+      width: 200px;
+      height: 200px;
+    }
+
+    &:last-child {
+      border: 1px solid red;
+      width: 200px;
+      height: 200px;
+    }
   }
 }
