--- a/src/app/features/table-board/components/table-board/table-board.component.scss
+++ b/src/app/features/table-board/components/table-board/table-board.component.scss
@@ -1,52 +1,3 @@
-//.board {
-//  width: 75vw;
-//  height: 75vw;
-//  display: flex;
-//  flex-direction: column;
-//  justify-content: start;
-//  align-items: start;
-//
-//  .board-row {
-//    display: flex;
-//    justify-content: start;
-//    align-items: center;
-//    width: 100%;
-//    height: calc(100% / 11);
-//    text-align: center;
-//  }
-//
-//  .property {
-//    display: flex;
-//    justify-content: center;
-//    align-items: center;
-//    flex-direction: column;
-//    width: calc(100% / 11);
-//    height: 100%;
-//
-//    &-right {
-//      position: relative;
-//      left: calc((100% / 11) * 9);
-//      //transform: rotate(-90deg);
-//    }
-//
-//    &-left {
-//      position: relative;
-//      transform: rotate(90deg);
-//    }
-//  }
-//
-//  .color {
-//    height: 10px;
-//    width: 100%;
-//    border: 1px solid black;
-//  }
-//
-//  .start-tile {
-//    border: 1px solid green;
-//  }
-//}
-
-
 .debug {
   border: 1px solid red;
 
@@ -55,36 +6,152 @@
   }
 }
 
+.rotate-90 {
+  transform: rotate(90deg);
+}
 
-.table {
+.rotate-180 {
+  transform: rotate(180deg);
+}
+
+
+.game-table {
   width: auto;
   height: auto;
-  box-shadow: 0 0 8px 4px blue;
-
+  border: 1px solid black;
 
   .board-row {
     width: 100%;
   }
 
-  .board-row-extreme {
-    width: 100%;
+
+  .corner-tile {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .tile-content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &-corner-top-left {
+        transform: rotate(135deg);
+      }
+
+      &-corner-top-right {
+        transform: rotate(-135deg);
+      }
+
+      &-corner-bottom-left {
+        transform: rotate(45deg);
+      }
+
+      &-corner-bottom-right {
+        transform: rotate(-45deg);
+      }
+    }
+
+    &-bottom-left {
+      border-top: 1px solid black;
+    }
+
+    &-bottom-right {
+      border-top: 1px solid black;
+      border-left: 1px solid black;
+    }
+
+    &-top-right {
+      border-left: 1px solid black;
+    }
+
+    &-top-left {
+
+    }
   }
 
-  .tile-row-1 {
-    border: 1px solid black;
+  .normal-tile {
     width: 150px;
     height: 200px;
 
-    &:first-child {
-      border: 1px solid red;
-      width: 200px;
-      height: 200px;
+    .tile-content {
+      padding: 10px;
+      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+
+      &-top {
+        width: 100%;
+        height: calc(100% - 40px);
+        transform: rotate(180deg);
+      }
+
+      &-bottom {
+        width: 100%;
+        height: calc(100% - 40px);
+      }
+
+      &-left {
+        width: 100%;
+        height: calc(100% - 40px);
+        transform: rotate(90deg);
+      }
+
+      &-right {
+        width: 100%;
+        height: calc(100% - 40px);
+        transform: rotate(-90deg);
+      }
     }
 
-    &:last-child {
-      border: 1px solid red;
+    &-top {
+      border-bottom: 1px solid black;
+      border-left: 1px solid black;
+
+      .tile-color {
+        width: 100%;
+        height: 40px;
+      }
+    }
+
+    &-bottom {
+      border-top: 1px solid black;
+      border-left: 1px solid black;
+
+      .tile-color {
+        width: 100%;
+        height: 40px;
+      }
+    }
+
+    &-right {
+      border-left: 1px solid black;
+      border-top: 1px solid black;
       width: 200px;
-      height: 200px;
+      height: 150px;
+
+      .tile-color {
+        width: 40px;
+        height: 100%;
+      }
+    }
+
+    &-left {
+      width: 200px;
+      height: 150px;
+      border-top: 1px solid black;
+      border-right: 1px solid black;
+
+      .tile-color {
+        width: 40px;
+        height: 100%;
+      }
     }
   }
+
+
 }
