--- a/src/app/features/table-board/components/table-board/table-board.component.html
+++ b/src/app/features/table-board/components/table-board/table-board.component.html
@@ -16,7 +16,7 @@
   <!--BOARD DI GIOCO-->
   <div class="row">
     <div class="col-12 d-flex justify-content-center align-items-center">
-      <div class="game-table" [style.rotate]="tableRotation">
+      <div [style.rotate]="tableRotation" class="game-table">
         <div *ngFor="let row of board;" class="board-row d-flex justify-content-between">
           <div *ngFor="let tile of row" [class]="tile.style?.class">
 
@@ -49,7 +49,8 @@
             </div>
 
             <!--SOTTO-->
-            <div *ngIf="tile.style?.class === 'normal-tile normal-tile-bottom'"
+            <div (click)="openCardDetailDialog(tile)"
+                 *ngIf="tile.style?.class === 'normal-tile normal-tile-bottom'"
                  class=" d-flex justify-content-between align-items-center flex-column"
                  style="width: 100%; height: 100%">
               <div [style.background]="tile.style?.color" class="tile-color"></div>
@@ -63,7 +64,8 @@
             </div>
 
             <!--SOPRA-->
-            <div *ngIf="tile.style?.class === 'normal-tile normal-tile-top'"
+            <div (click)="openCardDetailDialog(tile)"
+                 *ngIf="tile.style?.class === 'normal-tile normal-tile-top'"
                  class="d-flex justify-content-between align-items-center flex-column"
                  style="width: 100%; height: 100%">
               <div class="tile-content tile-content-top">
@@ -77,7 +79,8 @@
             </div>
 
             <!--DESTRA-->
-            <div *ngIf="tile.style?.class === 'normal-tile normal-tile-right'"
+            <div (click)="openCardDetailDialog(tile)"
+                 *ngIf="tile.style?.class === 'normal-tile normal-tile-right'"
                  class="d-flex justify-content-between align-items-center"
                  style="width: 100%; height: 100%">
               <div [style.background]="tile.style?.color" class="tile-color"></div>
@@ -91,9 +94,9 @@
             </div>
 
             <!--SINISTRA-->
-            <div *ngIf="tile.style?.class === 'normal-tile normal-tile-left'"
-                 class="d-flex justify-content-between align-items-center"
-                 style="width: 100%; height: 100%">
+            <div (click)="openCardDetailDialog(tile)"
+                 *ngIf="tile.style?.class === 'normal-tile normal-tile-left'"
+                 class="d-flex justify-content-between align-items-center" style="width: 100%; height: 100%">
               <div class="tile-content tile-content-left">
                 {{tile.name}}
                 <span *ngIf="tile.tag === 'property' || tile.tag === 'company' || tile.tag === 'station'"
@@ -105,6 +108,7 @@
             </div>
           </div>
         </div>
+        <app-card-detail *ngIf="openCardDetail" [cardItem]="cardItem"></app-card-detail>
       </div>
     </div>
   </div>
