--- a/src/app/features/table-board/components/table-board/table-board.component.scss
+++ b/src/app/features/table-board/components/table-board/table-board.component.scss
@@ -6,14 +6,6 @@
   }
 }
 
-.rotate-90 {
-  transform: rotate(90deg);
-}
-
-.rotate-180 {
-  transform: rotate(180deg);
-}
-
 
 .game-table {
   width: auto;
@@ -154,4 +146,12 @@
   }
 
 
+}
+
+app-card-detail {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
 }
