--- a/src/app/features/table-board/components/card-detail/card-detail.component.scss
+++ b/src/app/features/table-board/components/card-detail/card-detail.component.scss
@@ -1,1 +1,27 @@
 
+.card {
+  width: 25vw;
+  height: auto;
+  box-shadow: 0 0 16px 8px rgba(0, 0, 0, 0.2);
+  font-size: 1.5rem;
+  border-radius: 5px;
+
+  &-body {
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+
+.close-icon {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 30vw;
+  color: red;
+}
+
