--- a/src/app/features/table-board/components/property-card/property-card.component.scss
+++ b/src/app/features/table-board/components/property-card/property-card.component.scss
@@ -1,33 +1,35 @@
-.card-property {
-  width: 20vw;
-  height: auto;
-  padding: 5px;
-  box-shadow: 0 0 16px 8px rgba(0, 0, 0, 0.2);
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border: 1px solid black;
+}
 
-  &-body {
-    width: 100%;
-    height: 100%;
-    padding: 5px;
-    border: 1px solid black;
+.rent {
+  &-description {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    flex-direction: column;
   }
 
-  &-title {
-    width: 100%;
-    border: 1px solid black;
+  &-icon {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+
+    i.fa-home {
+      color: green;
+    }
+
+    i.fa-hotel {
+      color: red;
+    }
   }
 
-  &-content {
-
-  }
-
-  &-bottom {
-
+  &-price {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
 }
