--- a/src/app/features/table-board/components/table-board/table-board.component.scss
+++ b/src/app/features/table-board/components/table-board/table-board.component.scss
@@ -6,11 +6,15 @@
   }
 }
 
+.blur {
+  filter: blur(5px);
+}
 
 .game-table {
   width: auto;
   height: auto;
   border: 1px solid black;
+  transition: all 300ms ease-in-out;
 
   .board-row {
     width: 100%;
@@ -154,4 +158,8 @@ app-card-detail {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
