--- a/src/app/features/main-menu/components/main-menu/main-menu.component.html
+++ b/src/app/features/main-menu/components/main-menu/main-menu.component.html
@@ -1,21 +1,21 @@
 <div class="main-page">
   <div class="menu-body">
     <div class="menu-row">
-      <button class="menu-selection-btn"
-              (click)="openStartGameModal()"
+      <button (click)="openStartGameModal()" class="menu-selection-btn" color="primary"
+              main-btn
       >
         GIOCA
       </button>
     </div>
     <div class="menu-row">
-      <button class="menu-selection-btn">IMPOSTAZIONI</button>
+      <button class="menu-selection-btn" color="primary" main-btn>IMPOSTAZIONI</button>
     </div>
     <div class="menu-row">
-      <button class="menu-selection-btn">CREDITI</button>
+      <button class="menu-selection-btn" color="primary" main-btn>CREDITI</button>
     </div>
   </div>
 </div>
-<div class="starting-modal" *ngIf="startModal">
+<div *ngIf="startModal" class="starting-modal">
   <app-starting-modal (closeModalEmitter)="closeStartGameModal()"></app-starting-modal>
 </div>
 
