--- a/src/app/features/testing/testing/testing.component.html
+++ b/src/app/features/testing/testing/testing.component.html
@@ -1,7 +1,69 @@
 <div class="container">
+
+  <!--BUTTONS-->
   <div class="row p-2">
-    <div class="col-12 buttons-testing">
-      <button mainButton>Main Button</button>
+    <div class="col-12">
+      <h2>Bottoni Standard</h2>
+      <hr>
+    </div>
+  </div>
+  <div class="row p-2">
+    <div class="col-2 buttons-testing">
+      <button color="primary" main-btn>1 Button</button>
+    </div>
+    <div class="col-2">
+      <button color="secondary" main-btn>2 Button</button>
+    </div>
+    <div class="col-2">
+      <button color="tertiary" main-btn>3 Button</button>
+    </div>
+  </div>
+
+  <!--ICONS-->
+  <div class="row p-2 mt-4">
+    <div class="col-12">
+      <h2>Bottoni Icona</h2>
+      <hr>
+    </div>
+  </div>
+  <div class="row p-2">
+
+    <div class="col-2">
+      <button color="primary" main-icon-btn>
+        <i class="fas fa-arrow-left"></i>
+      </button>
+    </div>
+
+    <div class="col-2">
+      <button color="secondary" main-icon-btn>
+        <i class="fas fa-arrow-right"></i>
+      </button>
+    </div>
+
+    <div class="col-2">
+      <button color="tertiary" main-icon-btn>
+        <i class="fas fa-arrow-up"></i>
+      </button>
+    </div>
+
+    <div class="col-6">
+      <button close-icon-btn>
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+  </div>
+
+  <!--MODAL-->
+  <div class="row p-2 mt-4">
+    <div class="col-12">
+      <h2>Dialog Custom</h2>
+      <hr>
+    </div>
+  </div>
+
+  <div class="row p-2">
+    <div customDialog>
+
     </div>
   </div>
 </div>
