--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -1,11 +1,15 @@
 :root {
   --primary-color: #1D3557;
+  --primary-darker-color: #142640;
   --secondary-color: #457B9D;
+  --secondary-darker-color: #336280;
   --tertiary-color: #A8DADC;
+  --tertiary-darker-color: #7EBABD;
   --dark-white: #F1FAEE;
   --alert-color: #E63946;
+  --alert-darker-color: #AD232D;
 
-  --light-black-color: rgba(0, 0, 0, 0.5);
+  --light-black-color: rgba(0, 0, 0, 0.2);
 
   --player-color-1: #C1121F;
   --player-color-2: #0080FF;
